--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     # 数据卷挂载，持久化存储
     # Volume mounting for persistent storage
     volumes:
-      - wallet_os_data:/app
+      - ./wallet_os_data:/app/data
+    environment:
+      - DATABASE_URL=sqlite:/app/data/wallet-os.db
     # 容器停止后自动重启
     # Automatically restart unless explicitly stopped
     restart: unless-stopped
