--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,3 +63,4 @@ urlencoding = "2.1"
 url = "2.5"
 once_cell = "1.19"
 parking_lot = "0.12"
+tokio-stream = { version = "0.1", features = ["sync"] }
